[project]
name = "mppi-gps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assimp>=4.1.4",
    "gymnasium[mujoco]>=1.2.2",
    "ipython>=9.7.0",
    "jaxtyping>=0.3.3",
    "mujoco>=3.3.7",
    "numpy>=2.3.4",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.0",
    "wandb>=0.23.0",
]
