[project]
name = "mppi-gps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "assimp>=4.1.4",
    "gymnasium[mujoco]>=1.2.2",
    "imageio[ffmpeg]>=2.37.2",
    "ipdb>=0.13.13",
    "ipython>=9.7.0",
    "jax>=0.8.1",
    "jaxtyping>=0.3.3",
    "mujoco>=3.3.7",
    "mujoco-mjx>=3.3.7",
    "numpy>=2.3.4",
    "robosuite>=1.5.1",
    "stable-baselines3>=2.7.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "wandb>=0.23.0",
]

# defining a package and telling the code where it is (to be able to do mppi_gps from outside)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
